@@ -3,6 +3,9 @@
                               KijiSchema Release Notes
 
 Version 1.3.7
+  * SCHEMA-656. Resources which should be closed before JVM shutdown may now
+      be registered with DebugResourceTracker, which will log errors for all
+      unclosed resources when the JVM shuts down.
   * SCHEMA-651. cleanup deleted instances from zookeeper in
       /kiji-schema/instances.
   * SCHEMA-491. Share/reuse Zookeeper connections instances when possible.
